--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,9 @@
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
-
+      <a href="#/signup">signup</a>
+      <a href ="#/login">login</a>
+    
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
 
