--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,21 @@
-<div id='container'>
-  <!-- Your html here -->
+<div class='navigation'>
+<ul>
+  <li><a href='#/links' class='index'>All Links</a></li>
+  <li><a href='#/shorten' class='create'>Shorten</a></li>
+</ul>
+  <a href='/#/signout' class='logout'>Logout</a>
+</div>
+
+<div id='container' class = 'links'>
+
+    <div ng-repeat="link in data.links">
+      <div class='info link'>
+        <img src='/assets/redirect_icon.png'/>
+        <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
+        <div class='title'>{{link.title}}</div>
+        <div class='original'>{{link.dataurl}}</div>
+        <a href='{{link.baseUrl}}/{{link.code}}'>{{link.baseUrl}}/{{link.code}}</a>
+      </div>
+  </div>
+
 </div>
