--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -3,7 +3,7 @@
   <li><a href='#/links' class='index'>All Links</a></li>
   <li><a href='#/shorten' class='create'>Shorten</a></li>
 </ul>
-  <a href='/#/signout' class='logout'>Logout</a>
+  <button ng-click='signOut()' type='button' class='logout'>Logout</button>
 </div>
 
 <div id='container'>
