--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,7 +1,7 @@
 <div class='navigation'>
 <ul>
-  <li><a href='#/links' class='index'>All Links</a></li>
-  <li><a href='#/shorten' class='create'>Shorten</a></li>
+  <li><a ui-sref='links' class='index'>All Links</a></li>
+  <li><a ui-sref='shorten' class='create'>Shorten</a></li>
 </ul>
   <button ng-click='signOut()' type='button' class='logout'>Logout</button>
 </div>
